Add social share button for fb, tw, line

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.css" rel="stylesheet"/>
     <!--<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-language/v0.10.1/mapbox-gl-language.js'></script>-->
     <script src='mapbox-gl-language.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/sharer.js@latest/sharer.min.js"></script>
 
     <style>
         body {
@@ -130,6 +131,20 @@
         .atribution:hover #miltatribution {
             visibility: visible;
         }
+
+        .social-share-buttons {
+            margin: 18px 0px 0px 4px;
+        }
+
+        svg {
+            display: inline-block;
+            justify-content: space-evenly;
+            height: 18px;
+        }
+
+        path {
+            fill: white;
+        }
     </style>
 
 </head>
@@ -174,6 +189,28 @@
             <li id='button-ko' class='button'>한국어</li>
             <li id='button-en' class='button'>English</li>
         </ul>
+
+        <div class="social-share-buttons">
+            <svg id="facebook-share" data-sharer="facebook"
+                 data-url="https://www.christiantoday.co.jp/infographics/church-station/#map=5.48/37.165/137/-40/60&wd=500"
+                 role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <title id="facebook-share-text"></title>
+                <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+            </svg>
+            <svg id="twitter-share" data-sharer="twitter"
+                 data-url="https://www.christiantoday.co.jp/infographics/church-station/#map=5.48/37.165/137/-40/60&wd=500"
+                 role="img" viewBox="0 0 24 24"
+                 xmlns="http://www.w3.org/2000/svg">
+                <title id="twitter-share-text"></title>
+                <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"/>
+            </svg>
+            <svg id="line-share" data-sharer="line"
+                 data-url="https://www.christiantoday.co.jp/infographics/church-station/#map=5.48/37.165/137/-40/60&wd=500"
+                 role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <title id="line-share-text"></title>
+                <path d="M19.365 9.863c.349 0 .63.285.63.631 0 .345-.281.63-.63.63H17.61v1.125h1.755c.349 0 .63.283.63.63 0 .344-.281.629-.63.629h-2.386c-.345 0-.627-.285-.627-.629V8.108c0-.345.282-.63.63-.63h2.386c.346 0 .627.285.627.63 0 .349-.281.63-.63.63H17.61v1.125h1.755zm-3.855 3.016c0 .27-.174.51-.432.596-.064.021-.133.031-.199.031-.211 0-.391-.09-.51-.25l-2.443-3.317v2.94c0 .344-.279.629-.631.629-.346 0-.626-.285-.626-.629V8.108c0-.27.173-.51.43-.595.06-.023.136-.033.194-.033.195 0 .375.104.495.254l2.462 3.33V8.108c0-.345.282-.63.63-.63.345 0 .63.285.63.63v4.771zm-5.741 0c0 .344-.282.629-.631.629-.345 0-.627-.285-.627-.629V8.108c0-.345.282-.63.63-.63.346 0 .628.285.628.63v4.771zm-2.466.629H4.917c-.345 0-.63-.285-.63-.629V8.108c0-.345.285-.63.63-.63.348 0 .63.285.63.63v4.141h1.756c.348 0 .629.283.629.63 0 .344-.282.629-.629.629M24 10.314C24 4.943 18.615.572 12 .572S0 4.943 0 10.314c0 4.811 4.27 8.842 10.035 9.608.391.082.923.258 1.058.59.12.301.079.766.038 1.08l-.164 1.02c-.045.301-.24 1.186 1.049.645 1.291-.539 6.916-4.078 9.436-6.975C23.176 14.393 24 12.458 24 10.314"/>
+            </svg>
+        </div>
     </div>
 </div>
 
@@ -198,6 +235,12 @@
         return 'ja';
     }
 
+    const socialPlatforms = ["facebook", "twitter", "line"];
+
+    function capitalize(string) {
+        return string.charAt(0).toUpperCase() + string.slice(1);
+    }
+
     function switchLanguage(languageToSwitch) {
         var titleText = document.getElementById('title-text');
         var logo = document.getElementById('logo');
@@ -211,6 +254,9 @@
                 document.title = "教会と駅 : インフォグラフィックス : クリスチャントゥデイ";
                 toolTip.innerText = "１日あたり乗降者数１０００人以上で、教会が指定した範囲にない駅を青の四角柱で、ある駅をオレンジの四角柱で表示しています。四角柱の高さは乗降者数を表しています。";
                 miltAttribution.innerText = "国土交通省国土数値情報駅別乗降客数データを加工して作成";
+                socialPlatforms.forEach(function (item, index) {
+                    document.querySelector(`#${item}-share-text`).textContent = `${capitalize(item)}で共有`;
+                });
                 break;
             case 'ko':
                 titleText.innerText = "교회와역";
@@ -218,6 +264,9 @@
                 document.title = "교회와역 : 인포그래픽 : 일본크리스천투데이"
                 toolTip.innerText = "하루 승강 자수 1000 명 이상 교회가 지정한 범위에없는 역을 파란색 사각형 기둥에있는 역 오렌지색 직사각형 기둥으로 표시하고 있습니다. 사각 기둥의 높이가 승강 인원을 나타냅니다.";
                 miltAttribution.innerText = "일본 정부 국토 교통성 국토 수치 정보 역 별 승강 객수 데이터를 가공하여 만든";
+                socialPlatforms.forEach(function (item, index) {
+                    document.querySelector(`#${item}-share-text`).textContent = `${capitalize(item)}에서 공유`;
+                });
                 break;
             case 'en':
                 titleText.innerHTML = "Church<br><span>&</span><br>Station"
@@ -225,6 +274,9 @@
                 document.title = "Churches and Stations : Infographics : Christian Today Japan"
                 toolTip.innerText = "Stations with more than 1000 passengers per day without church(es) in the specified distance are represented as blue square pillars, stations with churches are in orange. Heights are the number of passengers.";
                 miltAttribution.innerText = "Station Data powered by National Land Information Division, National Spatial Planning and Regional Policy Bureau, Ministry of Land, Infrastructure and Tourism of Japan";
+                socialPlatforms.forEach(function (item, index) {
+                    document.querySelector(`#${item}-share-text`).textContent = `Share with ${capitalize(item)}`;
+                });
                 break;
         }
     }
@@ -263,6 +315,25 @@
     } else {
         console.log("hash NOT found walking distance defaults to " + walkingDistanceInHash);
     }
+
+    //ref: https://stackoverflow.com/questions/56760727/how-to-observe-a-change-in-the-url-using-javascript
+    (function () {
+        var rs = history.replaceState;
+        history.replaceState = function () {
+            rs.apply(history, arguments); // preserve normal functionality
+            console.log("Hash change detected. Updating social share uri to ", arguments[2]); // do something extra here; raise an event
+
+            for (const platform of socialPlatforms) {
+                console.log(platform);
+                let shareButton = document.getElementById(`${platform}-share`);
+                var url = arguments[2];
+                if (!url.includes("http")) {
+                    url = "https://www.christiantoday.co.jp/infographics/church-station/" + url;
+                }
+                shareButton.setAttribute("data-url", url);
+            }
+        };
+    }());
 
     // default variables for vertical viewports
     var mapPitch = 60;
@@ -393,7 +464,7 @@
 
         switchLanguage(detectedBrowserLanguage);
 
-        if(needsToAddHashWalkingDistanceParameter){
+        if (needsToAddHashWalkingDistanceParameter) {
             let hashToBeReplaced = window.location.hash + "&wd=" + walkingDistanceInHash;
             history.replaceState(undefined, undefined, hashToBeReplaced)
         }
