Mesh Data by Akira Nishizawa and Takashi Inoue

--- a/index.html
+++ b/index.html
@@ -445,6 +445,8 @@
             compact: false,
             customAttribution: [
                 "<a href=\"https://www.christiantoday.co.jp/\">© Christian Today Japan</a>",
+                "<a href=\"https://home.csis.u-tokyo.ac.jp/~nishizawa/teikyo/index.html\" target=\"_blank\" >© Akira Nishizawa</a>",
+                "<a href=\"http://agu-econ.maps.arcgis.com/apps/webappviewer/index.html?id=00804e1e1beb45e1864c5f24a65fd40d\" target=\"_blank\" >© Takashi Inoue</a>",
                 "<span class=\"atribution\"><a href=\"https://nlftp.mlit.go.jp/ksj/gml/datalist/KsjTmplt-S12-v2_3.html\" target=\"_blank\" >© MLIT of Japan</a><span id=\"miltatribution\"></span></div>"
             ]
         }));
