Add og:description for facebook share

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="クリスチャントゥデイ"/>
     <meta property="og:title" content="教会と駅ー未伝道地が見える宣教地図：クリスチャントゥデイ"/>
+    <meta property="og:description" content="「教会と駅」は、全国の教会が近くにない駅を可視化し、開拓宣教の候補地を考える際の参考情報を提供するために考案されたインターネット上の地図です。"/>
     <meta property="og:url" content="https://www.christiantoday.co.jp/infographics/church-station/"/>
     <meta property="og:image" content="https://www.christiantoday.co.jp/infographics/church-station/social-card.jpg"/>
 
